# TrueFlight

./: .gitignore  4d.lua  CMakeLists.txt  README.md  build.lua  cloud_sim.lua  conf.lua  engine.lua  gpu_renderer.lua  ground_system.lua  main.lua  networking.lua  quat.lua  relayServer.lua  settings.json  vector3.lua
.github/workflows/: cmake-multi-platform.yml
Docs/: SystemAudit-2026-03-05.md
NativePort/: CMakeLists.txt  build_trueflight.py
NativePort/Docs/: NativeCppPort.md  TerrainStreamingNotes.md
NativePort/Native/include/NativeGame/: Flight.hpp  GltfLoader.hpp  HudCanvas.hpp  ImageCodec.hpp  Math.hpp  ProceduralAudio.hpp  RenderTypes.hpp  SoftwareRenderer.hpp  StlLoader.hpp  TerrainChunkBakeCache.hpp  VulkanRenderer.hpp  World.hpp  WorldStore.hpp  WorldWire.hpp
NativePort/Native/shaders/: hud.frag  hud.vert  scene.frag  scene.vert
NativePort/Native/src/: VulkanRenderer.cpp  main.cpp
NativePort/Native/tests/: native_smoke.cpp
Source/Audio/: ProceduralAudio.lua
Source/Core/: AppState.lua  GameDefaults.lua
Source/Input/: InputSystem.lua
Source/ModelModule/: Init.lua  PaintRuntime.lua
Source/Net/: Networking.lua  PacketCodec.lua
Source/Render/: GpuRenderer.lua  SkyModel.lua
Source/Sim/: AeroModel.lua  FlightModelDefaults.lua  FlightTrim.lua  MarchingCubes.lua  SdfTerrainField.lua
Source/Systems/: FlightDynamicsSystem.lua  FlightTrimWorker.lua  TerrainMeshingWorker.lua  TerrainSdfSystem.lua  ViewSystem.lua
Source/Ui/: PauseMenuSystem.lua  RestartSnapshotCompat.lua
TestRunners/CpuRenderClassifier/: main.lua
TestRunners/EngineMathAndCollision/: main.lua
TestRunners/FlightDynamics/: main.lua
TestRunners/GltfRootFallback/: main.lua
TestRunners/ModelModuleContract/: main.lua
TestRunners/PacketCodecAndNetworking/: main.lua
TestRunners/PaintRuntimeBudget/: main.lua
TestRunners/RestartSnapshotCompat/: main.lua
TestRunners/TerrainCollision/: main.lua
Tests/: ControlsStrictModifiers.lua  CpuRenderClassifier.lua  EngineMathAndCollision.lua  FlightDynamics.lua  FlightGroundContact.lua  PaintRuntimeBudget.lua  TerrainChunkStreaming.lua  main.lua
model_module/: init.lua  material_runtime.lua
model_module/importers/: gltf_importer.lua
portSource/: conf.lua  main.lua
portSource/Assets/Models/: DualEngine.stl
portSource/Docs/: ModelAttributions.md  SystemAudit-2026-03-05.md
portSource/Source/App/: ClientMain.lua
portSource/Source/Audio/: ProceduralAudio.lua
portSource/Source/Core/: Engine.lua  FrameProfiler.lua  GameDefaults.lua  Logger.lua  ObjectDefs.lua  UserProfileStore.lua
portSource/Source/Input/: Controls.lua  InputSystem.lua
portSource/Source/Math/: Quat.lua  Vector3.lua  ViewMath.lua
portSource/Source/ModelModule/: Diagnostics.lua  Init.lua  JsonDecode.lua  NetBlobSync.lua  PaintRuntime.lua  Persistence.lua  RenderBridgeCpu.lua  RenderBridgeGpu.lua
portSource/Source/Net/: BlobCache.lua  HostedServer.lua  Networking.lua  RelayServer.lua  WebRtcVoiceBackend.lua
portSource/Source/Render/: CpuRenderClassifier.lua  GpuRenderer.lua  ShadowPass.lua
portSource/Source/Sandbox/: FourD.lua
portSource/Source/Sim/: Atmosphere.lua  FlightModelDefaults.lua  PropulsionModel.lua  RigidBodyIntegrator.lua  SdfTerrainField.lua  TerrainCollision.lua  (+1 more)
portSource/Tests/: AtmosphereAndPropulsion.lua  ControlsRebind.lua  DedicatedLauncherCompile.lua  FlightConfigParity.lua  GameDefaultsContracts.lua  GltfRootFallback.lua  HostedServerAuthoritative.lua  MainEntryPointCompile.lua  MainPauseMenuIntegration.lua  ModelModuleContract.lua  PacketCodecAndNetworking.lua  PbrLightingContracts.lua  RestartSnapshotCompat.lua  TerrainAdaptiveQuality.lua  TerrainChunkStreaming.lua  TerrainCollision.lua  TerrainSdfDeterminism.lua  ViewMathMapTransforms.lua  WorldStore.lua  WorldWire.lua  main.lua
portSource/dedicatedServerLauncher/: conf.lua  main.lua
(+17 files in other folders)
